b2005-04-07  Ross Burton  <ross@burtonini.com>

	Merge fixes from HEAD.
	
	* src/sj-extractor.c:
	Ensure the pipeline has stopped when firing an error.
	
	* src/sj-extracting.c:
	Use gnome-open instead of nautilus.

	* src/sj-prefs.c:
	Don't write NULL strings to GConf, and remove tests which may
	crash. Unselect the profile option box when there is no profile in
	gconf.

	* src/sj-util.c:
	Handle NULL devices safely.

	* data/sound-juicer.schemas.in:
	Fix default audio profile.

	* README:
	Updated.

2005-02-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.6.0!

2005-02-01  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Handle an empty profile gconf key (closes 164170, based on a patch
	from Madhan Raj M)

2005-02-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting:
	Make the Close button default when a rip is complete (closes
	142743)

2005-02-01  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Use delete-event instead of destroy-event, check if we are ripping
	when Quit is selected, and fix the reversed "you are still
	ripping" logic.  (closes #163153, thanks to Madhan Raj M)

2005-02-01  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Ensure (De)Select All reflects the state of the selection (closes
	#162830, thanks to Nirmal Kumar)

	Use exit() in the "profile not found" dialog, it may be called
	outside the main loop (closes #164092, thanks to Madhan Raj M)

2005-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the Extract/Re-read/Select All/Deselect All menu items
	when extracting (closes 162252, thanks to Raj Madhan)

2005-01-04  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	* src/sj-extractor.c:
	s/Gnome/GNOME/

2004-12-22  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	Updated libbacon, fixing HAL builds.

2004-11-23  Ross Burton  <ross@burtonini.com>

	* src/*:
	Update libbacon.
