@@ -13,6 +13,9 @@ b2005-04-07  Ross Burton  <ross@burtonini.com>
 	crash. Unselect the profile option box when there is no profile in
 	gconf.
 
+	* src/sj-main.c:
+	Initialise the profiles at the right time.
+	
 	* src/sj-util.c:
 	Handle NULL devices safely.
 
